--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     a {
       text-decoration: none;
     }
+        .my-text
+        {
+            float: left;
+            margin-left: 250px;
+        }
     </style>
 </head>
 
@@ -37,7 +42,7 @@
             <td><div class="header2">
                  <img src="foto/ndjek.png" alt="foto" style="height:90px; margin-left:10px; background-color:#33302e; margin-top:50px;">
             </div></td>
-            <td rowspan="2" style="width:100%;">Tek ne mund të mbështeteni gjithmonë,
+            <td rowspan="2" style="width:100%;" class="my-text"><br /><br />Tek ne mund të mbështeteni gjithmonë,
                            sepse ne kujdesemi për ju<br><br>
                            Mirë se vini në ueb faqen e Kompanisë së Sigurimeve PRISIG Sh.A <br><br>
 
