--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Faqja Kryesore</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="faqet-tjera/index.css">
+    <link rel="stylesheet" type="text/css" href="index1.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <style>
     a {
@@ -18,14 +19,13 @@
 </head>
 
 <body>
-
   <header class="header">
     <div class="container">
       <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
 
       <nav>
         <ul>
-          <li> <a href="#">BALLINA</li>
+          <li><strong> <a href="#">BALLINA</strong></li>
           <li> <a href="#">PRODUKTET E SIGURIMEVE</li>
           <li> <a href="#">SHPALLJE</li>
           <li> <a href="#">RRETH NESH</li>
@@ -36,12 +36,10 @@
   </header>
 
  <div class="pjesa2">
-         <footer id="footer">
-                   <table align="left " id="footer">
-                      <br/> <br/> <tr>
-                           <td><a href="https://www.facebook.com"><img src="foto/rsslogo.jpg" height="68" width="68" title="Facebook"></a></td>
-                           <td><a href="https://www.instagram.com"><img src="foto/katrorlogo.jpg" height="68" width="68" title="Instagram"></a></td>
-                           <td><a href="https://www.twitter.com"><img src="foto/twitterlogo.jpg" height="68" width="68" title="Twitter"></a></td>
+                  
+                          <a href="https://www.facebook.com"><img src="foto/rss-logo.png" height="100" width="115" le="Facebook"></a>
+                          <a href="https://www.instagram.com"><img src="foto/katrorlogo.jpg" height="68" width="68" title="Instagram"></a>
+                          <a href="https://www.twitter.com"><img src="foto/twitterlogo.jpg" height="68" width="115itle="Twitter"></a>  
                        </tr>
                    </table>
              <br /><br /><br /><br /><br/>
