--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <title>Faqja Kryesore</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="faqet-tjera/index.css">
-    <link rel="stylesheet" type="text/css" href="index1.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <style>
     a {
