--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="gallery" style=" width: 400px ; height :500px;">
                    <img src="foto/home.jpg" style="outline: 2px #999595 solid;">
                    <div class="desc"> <h3>Sigurimi i Shtepise</h3>
-                <p id=text1>Sigurimi i shtepise tuaj eshte nje pergjegjesi
+                <p id=text1">Sigurimi i shtepise tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
             </div>
@@ -69,7 +69,7 @@
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="foto/baby.jpg" style="outline: 2px #999595 solid;">
             <div class="desc"> <h3>Sigurimi i femijes tuaj</h3>
-             <p id="text1>Sigurimi i femijes tuaj eshte nje pergjegjesi
+             <p id="text1">Sigurimi i femijes tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
              </div>
@@ -77,7 +77,7 @@
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="foto/hospital.jpg" style="outline: 2px #999595 solid;">
             <div class="desc"> <h3>Sigurimi i spitalit tuaj</h3>
-            <p id="text1>Sigurimi i spitalit tuaj eshte nje pergjegjesi
+            <p id="text1">Sigurimi i spitalit tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
             </div>
@@ -91,7 +91,7 @@
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="foto/mercedes.jpg" style="outline: 2px #999595 solid;">
             <div class="desc"> <h3>Sigurimi i vetures tuaj</h3>
-            <p id="text1>Sigurimi i vetures tuaj eshte nje pergjegjesi
+            <p id="text1">Sigurimi i vetures tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
             </div>
@@ -107,7 +107,7 @@
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="foto/camera.jpg" style="outline: 2px #999595 solid;">
             <div class="desc"> <h3>Sigurimi i vendit tuaj</h3>
-             <p id="text1>Sigurimi i vendit tuaj eshte nje pergjegjesi
+             <p id="text1">Sigurimi i vendit tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
              </div>
