--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                    <div class="desc"> <h3>Sigurimi i Shtepise</h3>
                 <p id=text1">Sigurimi i shtepise tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
+                kualitative ne tregun tone, si dhe në shtetet fqinje.</p>
             </div>
                 </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
@@ -71,7 +71,7 @@
             <div class="desc"> <h3>Sigurimi i femijes tuaj</h3>
              <p id="text1">Sigurimi i femijes tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
+                kualitative ne tregun tone, si dhe në shtetet fqinje.</p>
              </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
@@ -144,7 +144,7 @@
                                <input type="reset" value="Pastro"/>
                             </div>
                   </div> 
-                  <div style="border: 1px green solid; width: 40%; height: 310px;">
+                  <div style="border: 1px green solid; width: 40%; height: 312px;">
                        
                   </div>
      </div>
