--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
       <nav>
         <ul>
-          <li><strong> <a href="#">BALLINA</strong></li>
-          <li> <a href="#">PRODUKTET E SIGURIMEVE</li>
-          <li> <a href="#">SHPALLJE</li>
-          <li> <a href="#">RRETH NESH</li>
-          <li><a href="#">KONTAKTI</li>
+          <li> <a href="#">BALLINA</a></li>
+          <li> <a href="#">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="#">SHPALLJE</a></li>
+          <li> <a href="#">RRETH NESH</a></li>
+          <li><a href="#">KONTAKTI</a></li>
         </ul>
       </nav>
    </div>
