--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav>
         <ul>
           <li> <a href="#">BALLINA</a></li>
-          <li> <a href="#">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
           <li> <a href="#">SHPALLJE</a></li>
           <li> <a href="#">RRETH NESH</a></li>
           <li><a href="#">KONTAKTI</a></li>
