--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
           <li> <a href="#">SHPALLJE</a></li>
           <li> <a href="#">RRETH NESH</a></li>
-          <li><a href="#">KONTAKTI</a></li>
+          <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
       </nav>
    </div>
