--- a/kontakti.html
+++ b/kontakti.html
@@ -14,11 +14,11 @@
 
       <nav>
         <ul>
-          <li> <a href="#">BALLINA</a></li>
+          <li> <a href="index.html">BALLINA</a></li>
           <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
           <li> <a href="#">SHPALLJE</a></li>
           <li> <a href="#">RRETH NESH</a></li>
-          <li><a href="#">KONTAKTI</a></li>
+          <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
       </nav>
    </div>
