--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <nav>
         <ul>
-          <li> <a href="#">BALLINA</a></li>
+          <li> <a href="index.html">BALLINA</a></li>
           <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
           <li> <a href="#">SHPALLJE</a></li>
           <li> <a href="#">RRETH NESH</a></li>
