--- a/rrethnesh.html
+++ b/rrethnesh.html
@@ -1,1 +1,77 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Faqja Kryesore</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="index.html">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="rrethnesh.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  
+</head>         
+
+<body>
+  <header class="header">
+    <div class="container">
+      <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
+
+      <nav>
+        <ul>
+          <li> <a href="#index.html">BALLINA</a></li>
+          <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="#faqet-tjera/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="#">RRETH NESH</a></li>
+          <li><a href="#">KONTAKTI</a></li>
+        </ul>
+      </nav>
+   </div>
+  </header>
+    <div class="banner" style=" width: auto;height:430px;"></div> 
+    <div align="center"><h1>Rreth nesh</h1></div><hr>
+    <img src="foto/msionidhevizioni.jpg">
+    <div align="left"><p><i>Misioni, vizioni dhe vlerat e PROSIG</i></p>
+        <p>Të jemi zgjidhja ideale e ofrimit të sigurimeve duke identifikuar në pëpikmëri kërkesat dhe nevojat e klientëve për sigurime.  
+Prosig synon të ofrojë produkte dhe shërbime të nivelit të lartë me standard ndërkombëtar dhe korrekt për kërkesat e të siguruarve, 
+duke shërbyer si furnizues i produkteve të sigurimeve, dhe të shërbejë si mbështetje financiare për të dëmtuarit dhe njëkohësisht të jetë një kompani stabile dhe profitabile.
+Planifikohet rritja e aktivitetit me produkte ekzistuese ndaj klientëve të rinjë, duke respektuar vazhdimisht ata dhe duke pasur kujdes në rentabilitetin 
+e punës. Në këtë drejtim janë  të angazhuar ekspertë nga lëmia e sigurimeve dhe ajo teknike në mënyrë që shërbimet të jenë në nivelin më të lartë.
+Prosig posedon  infrastrukturën moderne të IT-së, që efikasiteti të jetë në nivel të lartë.
+Prosig ofron produkte të dizajnuara veqanërisht për nevojat e klientëve, në mënyrë që ata të ndiejnë se janë të rëndësishëm dhe të respektueshëm.
+Kualiteti në punë, shërbimet e shpejta dhe korrekte, pagesat e dëmeve dhe serioziteti në punë është standard i punës së Kompanisë.
+Prosig është kompani serioze efikase me vizion të ri dhe të qartë që do t’i përgjigjet standardeve më të reja dhe më cilësore, që do të jenë shembull për tregun vendor dhe regjional.
+Vlerat tona përfaqësojnë mënyrën se si ne i përmbushim kërkesat me përgjegjësi  për të Siguruarit tonë
+duke qenë:
+Prijes në industrinë e sigurimeve në vend
+Me qasje proaktive dhe të përgjegjshme ndaj palëve të interesuara 
+Duke bërë angazhimin për Përsosmëri Operative udhëhequr nga integriteti dhe profesionalizmi.
+inovativ dhe krijues të produkteve të reja  
+sigurues i një mjedisi të drejtë</p>
+        
+    </div> 
+    <img src="foto/Apliko-per-punesim1.png">
+    <div align="left"><p><i>Konkures per pune</i></p></div> 
+    <p>“PROSIG“është kompani e sigurimeve, me seli në Prishtinë dhe me një ekip profesional me eksperiencë shumëvjeçare në industrinë e sigurimeve.
+        Ofrojmë shërbime të ndryshme të sigurimeve, dhe këtë e bëjmë në mënyrë të besueshme, bashkëkohore dhe me vëmendje të veçantë ndaj klientëve.
+        Jemi duke zgjeruar ekipin tonë, prandaj nëse i përshtateni kësaj mënyre të punës, dhe jeni të interesuar të krijoni karrierë në këtë industri,
+        ju ftojmë të aplikoni për:</p>
+    <h3>Pozita per punesim:Jurist ne departamentin juridik</h3>
+    <p>Detyrat dhe pergjithesite</p>
+    <ul>
+        <li><p>Pregaditja Superiore Fakulteti Juridik</p></li>
+        <li><p>Të ketë të kryer, Provimin e Jurispondencës</p></li>
+        <li><p>Të ketë se paku 3 vjet përvojë pune profesionale</p></li>
+        <li><p> E preferueshme përvoja ne sigurime apo institucione financiare</p></li>
+        <li><p>Njohuri shumë të mira kompjuterike</p></li>
+        <li><p>Njohuri të mira të gjuhës Angleze (të shkruar dhe të folur)</p></li>
+        <li><p>Të ketë aftësi shumë të mira organizuese dhe komunikuese</p></li>
+        <li><p>Të ketë aftësi komunikative, të jetë i drejtpërdrejtë dhe i afërt në komunikim me palë dhe me njerëz në përgjithësi</p></li>
+        <li><p>Të ketë imazh profesional, etik dhe sjellje të mirë</p></li>
+    </ul>
+                  
+    <footer>
+        Copyright &COPY; 2018 PROSIG - All Rights Reserved
+    </footer>
+ 
+</body>
+</html>
 
