--- a/rrethnesh.html
+++ b/rrethnesh.html
@@ -3,8 +3,6 @@
 <head>
     <title>Faqja Kryesore</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="index.html">
-    <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="rrethnesh.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   
@@ -20,8 +18,8 @@
           <li> <a href="#index.html">BALLINA</a></li>
           <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
           <li> <a href="#faqet-tjera/shpallje.html">SHPALLJE</a></li>
-          <li> <a href="#">RRETH NESH</a></li>
-          <li><a href="#">KONTAKTI</a></li>
+          <li> <a href="rrethnesh.html">RRETH NESH</a></li>
+          <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
       </nav>
    </div>
