--- a/kontakti.html
+++ b/kontakti.html
@@ -17,7 +17,7 @@
           <li> <a href="index.html">BALLINA</a></li>
           <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
           <li> <a href="#">SHPALLJE</a></li>
-          <li> <a href="rrethnesh">RRETH NESH</a></li>
+          <li> <a href="rrethnesh.html">RRETH NESH</a></li>
           <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
       </nav>
