--- a/rrethnesh.html
+++ b/rrethnesh.html
@@ -15,9 +15,9 @@
 
       <nav>
         <ul>
-          <li> <a href="#index.html">BALLINA</a></li>
+          <li> <a href="index.html">BALLINA</a></li>
           <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="#faqet-tjera/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="faqet-tjera/shpallje.html">SHPALLJE</a></li>
           <li> <a href="rrethnesh.html">RRETH NESH</a></li>
           <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
