--- a/rrethnesh1.html
+++ b/rrethnesh1.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Misioni dhe Vizioni</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="rrethnesh.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  
+</head>         
+
+<body>
+  <header class="header">
+    <div class="container">
+      <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
+
+      <nav>
+        <ul>
+          <li> <a href="index.html">BALLINA</a></li>
+          <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="faqet-tjera/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="rrethnesh.html">RRETH NESH</a></li>
+          <li><a href="kontakti.html">KONTAKTI</a></li>
+        </ul>
+      </nav>
+   </div>
+  </header>
+    <div class="banner" style=" width: 100%;height:500px;"></div> 
+   
+    <section id="wrap">
+        <nav class="left">
+            <p><a href="rrethnesh.html" style="color: #68686c;">PER NE</a></p>
+            <p><a href="rrethnesh1.html" style="color: #68686c;">MISIONI DHE VIZIONI</a></p>
+            <p><a href="rrethnesh2.html" style="color: #68686c;">KUSH JEMI NE</a></p>
+            <p><a href="kontakti.html" style="color: #68686c;">KONTAKTI</a></p>
+        </nav>
+        <div class="right">
+            <div class="center">
+                <div class="center1">
+                    <br>
+                <h2>MISIONI DHE VIZIONI</h2>
+                <p>Të jemi zgjidhja ideale e ofrimit të sigurimeve duke 
+                    identifikuar në pëpikmëri kërkesat dhe nevojat e klientëve për sigurime. 
+                </p>
+                <img style="margin-left: 150px;" src="foto/misioni-vizioni.jpg" alt="Misioni dhe Vizioni">
+                <p>PRISIG synon të ofrojë produkte dhe shërbime 
+                    të nivelit të lartë me standard ndërkombëtar 
+                    dhe korrekt për kërkesat e të siguruarve, duke
+                    shërbyer si furnizues i produkteve të sigurimeve, dhe 
+                    të shërbejë si mbështetje financiare për të dëmtuarit 
+                    dhe njëkohësisht të jetë një kompani stabile dhe profitabile.</p><br>
+                <p>Planifikohet rritja e aktivitetit me produkte 
+                    ekzistuese ndaj klientëve të rinjë, duke respektuar
+                    vazhdimisht ata dhe duke pasur kujdes në 
+                    rentabilitetin e punës. Në këtë drejtim janë  
+                    të angazhuar ekspertë nga lëmia e sigurimeve 
+                    dhe ajo teknike në mënyrë që shërbimet të jenë
+                    në nivelin më të lartë.</p><br>
+                <p>PRISIG posedon  infrastrukturën moderne të IT-së, që efikasiteti të jetë në nivel të lartë.</p><br>
+                <p>PRISIG ofron produkte të dizajnuara veqanërisht
+                    për nevojat e klientëve, në mënyrë që ata të 
+                    ndiejnë se janë të rëndësishëm dhe të respektueshëm.</p>
+                
+                </div></div>
+        </div>
+    </section>
+    
+    <footer>
+        Copyright &COPY; 2018 PROSIG - All Rights Reserved
+    </footer>
+</body>
+</html>
+
 
