--- a/rrethnesh2.html
+++ b/rrethnesh2.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Kush jemi ne</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="rrethnesh.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  
+</head>         
+
+<body>
+  <header class="header">
+    <div class="container">
+      <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
+
+      <nav>
+        <ul>
+          <li> <a href="index.html">BALLINA</a></li>
+          <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="faqet-tjera/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="rrethnesh.html">RRETH NESH</a></li>
+          <li><a href="kontakti.html">KONTAKTI</a></li>
+        </ul>
+      </nav>
+   </div>
+  </header>
+    <div class="banner" style=" width: 100%;height:500px;"></div> 
+   
+    <section id="wrap">
+        <nav class="left">
+            <p><a href="rrethnesh.html" style="color: #68686c;">PER NE</a></p>
+            <p><a href="rrethnesh1.html" style="color: #68686c;">MISIONI DHE VIZIONI</a></p>
+            <p><a href="rrethnesh2.html" style="color: #68686c;">KUSH JEMI NE</a></p>
+            <p><a href="kontakti.html" style="color: #68686c;">KONTAKTI</a></p>
+        </nav>
+        <div class="right">
+            <div class="center">
+                <div class="center1">
+                    <br>
+                <h2>KUSH JEMI NE</h2>
+                <p>Kompania e sigurimeve “Kosova e Re” është trashëgimtare
+                    e shtëpise më të vjetër të sigurimve “Kosova” dhe si e 
+                    tillë është më e madhja, me shtrirje më të gjërë në tërë
+                    territorin gjeografik të Kosovës dhe me të drejtën e ushtrimit 
+                    të veprimtarisë në të gjitha llojet e sigurimeve.</p><br>
+                <p>Kompania e Sigurimeve “Kosova”, në tregun e sigurimeve në
+                    Kosovë ka qenë e pranishme që nga viti 1974. Nga ky vit,
+                    në përputhje me ridefinimin e statusit të saj, u themelua
+                    si Bashkësi e sigurimit të Pasurisë dhe Personave me 
+                    emrin “Kosova”. Që nga viti 1990 ka punuar si shoqëri aksionare.</p><br>
+                <p>Në harmoni me bazat e transformimit të pronësisë,
+                    Kuvendi i aksionarëve vendosi ta riorganizojë në 
+                    Kompani të Sigurimeve “Kosova”, me status të shoqërisë
+                    aksionare, duke miratuar aktet themelore si dhe duke
+                    emëruar Këshillin Drejtues, Këshillin mbikqyrës dhe 
+                    Drejtorin e përgjithshëm të Kompanisë.</p><br>
+                <h4>Kompania PROSIG ofron keto sigurime primare</h4>
+                    <ol>
+                        <li>Sigurime te makinave</li>
+                        <li>Sigurimeve te shtepise</li>
+                        <li>Sigurime te femijes tuaj</li>
+                        <li>Sigurime te kompanise suaj</li>
+                    </ol>
+                <br>
+                <p>“Kosova e Re” po e vazhdon traditën duke qenë njëra
+                    nga shtëpitë më të respektuara në fushën e sigurimeve 
+                    dhe me imazhin e ruajtur te klientët dhe qytetarët e Kosovës,
+                    si një partner dhe sigurues i denjë.</p>
+                
+                </div></div>
+        </div>
+    </section>
+    
+    <footer>
+        Copyright &COPY; 2018 PROSIG - All Rights Reserved
+    </footer>
+</body>
+</html>
+
 
