--- a/kontakti.html
+++ b/kontakti.html
@@ -16,7 +16,7 @@
         <ul>
           <li> <a href="index.html">BALLINA</a></li>
           <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="#">SHPALLJE</a></li>
+          <li> <a href="faqet-tjera/shpallje.html">SHPALLJE</a></li>
           <li> <a href="rrethnesh.html">RRETH NESH</a></li>
           <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
