--- a/kontakti.html
+++ b/kontakti.html
@@ -135,7 +135,7 @@
             <br style="clear: left;" />
 </div>
     </div>
-    <a href="index.html" id="back-to-top" style="display: block;">
+    <a href="kontakti.html" id="back-to-top" style="display: block;">
         <img src="https://www.scor.com/sites/all/themes/custom/customer/images/scroll-scor-VA.png" alt="back-to-top"></a>
     <footer>
         Copyright &COPY; 2018 PROSIG - All Rights Reserved
