--- a/rrethnesh1.html
+++ b/rrethnesh1.html
@@ -42,7 +42,7 @@
                     identifikuar në pëpikmëri kërkesat dhe nevojat e klientëve për sigurime. 
                 </p>
                 <img style="margin-left: 150px;" src="foto/misioni-vizioni.jpg" alt="Misioni dhe Vizioni">
-                <p>PRISIG synon të ofrojë produkte dhe shërbime 
+                <p>PROSIG synon të ofrojë produkte dhe shërbime 
                     të nivelit të lartë me standard ndërkombëtar 
                     dhe korrekt për kërkesat e të siguruarve, duke
                     shërbyer si furnizues i produkteve të sigurimeve, dhe 
@@ -55,8 +55,8 @@
                     të angazhuar ekspertë nga lëmia e sigurimeve 
                     dhe ajo teknike në mënyrë që shërbimet të jenë
                     në nivelin më të lartë.</p><br>
-                <p>PRISIG posedon  infrastrukturën moderne të IT-së, që efikasiteti të jetë në nivel të lartë.</p><br>
-                <p>PRISIG ofron produkte të dizajnuara veqanërisht
+                <p>PROSIG posedon  infrastrukturën moderne të IT-së, që efikasiteti të jetë në nivel të lartë.</p><br>
+                <p>PROSIG ofron produkte të dizajnuara veqanërisht
                     për nevojat e klientëve, në mënyrë që ata të 
                     ndiejnë se janë të rëndësishëm dhe të respektueshëm.</p>
                 
@@ -69,5 +69,4 @@
     </footer>
 </body>
 </html>
-
 
