--- a/rrethnesh2.html
+++ b/rrethnesh2.html
@@ -38,19 +38,19 @@
                 <div class="center1">
                     <br>
                 <h2>KUSH JEMI NE</h2>
-                <p>Kompania e sigurimeve “Kosova e Re” është trashëgimtare
-                    e shtëpise më të vjetër të sigurimve “Kosova” dhe si e 
+                <p>Kompania e sigurimeve “PROSIG” është trashëgimtare
+                    e shtëpise më të vjetër të sigurimve "SIGURIMI" dhe si e 
                     tillë është më e madhja, me shtrirje më të gjërë në tërë
                     territorin gjeografik të Kosovës dhe me të drejtën e ushtrimit 
                     të veprimtarisë në të gjitha llojet e sigurimeve.</p><br>
-                <p>Kompania e Sigurimeve “Kosova”, në tregun e sigurimeve në
-                    Kosovë ka qenë e pranishme që nga viti 1974. Nga ky vit,
+                <p>Kompania e Sigurimeve “SIGURIMI”, në tregun e sigurimeve në
+                    Kosovë ka qenë e pranishme që nga viti 2000. Nga ky vit,
                     në përputhje me ridefinimin e statusit të saj, u themelua
                     si Bashkësi e sigurimit të Pasurisë dhe Personave me 
-                    emrin “Kosova”. Që nga viti 1990 ka punuar si shoqëri aksionare.</p><br>
+                    emrin “SIGURIMI”. Që nga viti 2001 ka punuar si shoqëri aksionare.</p><br>
                 <p>Në harmoni me bazat e transformimit të pronësisë,
                     Kuvendi i aksionarëve vendosi ta riorganizojë në 
-                    Kompani të Sigurimeve “Kosova”, me status të shoqërisë
+                    Kompani të Sigurimeve “PROSIG”, me status të shoqërisë
                     aksionare, duke miratuar aktet themelore si dhe duke
                     emëruar Këshillin Drejtues, Këshillin mbikqyrës dhe 
                     Drejtorin e përgjithshëm të Kompanisë.</p><br>
@@ -62,7 +62,7 @@
                         <li>Sigurime te kompanise suaj</li>
                     </ol>
                 <br>
-                <p>“Kosova e Re” po e vazhdon traditën duke qenë njëra
+                <p>“PROSIG” po e vazhdon traditën duke qenë njëra
                     nga shtëpitë më të respektuara në fushën e sigurimeve 
                     dhe me imazhin e ruajtur te klientët dhe qytetarët e Kosovës,
                     si një partner dhe sigurues i denjë.</p>
@@ -76,5 +76,4 @@
     </footer>
 </body>
 </html>
-
 
