--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div style="width:90%;height :90px;">       
                      <label align="left" style="opacity:0.4; font-size: 18px;margin: 15px 0px 0px 27px;">Subscribe Per Email:</label><br />
                      <input type="text" name="title" size="48" placeholder="Enter your email here..." style="margin-left: 27px;  border :1px white solid ;" />
-                     <input id="color1" type="submit" value="Subscribe" size="20" style=" border:1px white solid ;color :green;background: #33302e;"/>    
+                     <input id="color1" type="submit" onclick="window.location.href='login.html'" value="Logout" size="20" style=" border:1px white solid ;color :green;background: #33302e;"/>    
                 </div>
             </div>
              <div class="right">
