--- a/index.html
+++ b/index.html
@@ -73,26 +73,29 @@
             <td>
                 <div class="gallery" style=" width: 400px ; height :500px;">
                    <img src="foto/home.jpg" style="outline: 2px #999595 solid;">
-                   <div class="desc"> <h3>Sigurimi i Shtepise</h3>
+                   <div class="desc"> <h3>Sigurimi i Shtepisë</h3>
                 <p id=text1">Sigurimi i shtepise tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe në shtetet fqinje.</p>
+                <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>
             </div>
                 </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="foto/baby.jpg" style="outline: 2px #999595 solid;">
-            <div class="desc"> <h3>Sigurimi i femijes tuaj</h3>
+            <div class="desc"> <h3>Sigurimi i Fëmijës tuaj</h3>
              <p id="text1">Sigurimi i femijes tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe në shtetet fqinje.</p>
+                 <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>          
              </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="foto/hospital.jpg" style="outline: 2px #999595 solid;">
-            <div class="desc"> <h3>Sigurimi i spitalit tuaj</h3>
+            <div class="desc"> <h3>Sigurimi i Spitalit</h3>
             <p id="text1">Sigurimi i spitalit tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
+                <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>          
             </div>
         </div>
             </td>
@@ -102,26 +105,29 @@
             <td>
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="foto/mercedes.jpg" style="outline: 2px #999595 solid;">
-            <div class="desc"> <h3>Sigurimi i vetures tuaj</h3>
+            <div class="desc"> <h3>Sigurimi i Makines</h3>
             <p id="text1">Sigurimi i vetures tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
+                <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>         
             </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="foto/truck.jpg" style="outline: 2px #999595 solid;">
-            <div class="desc"> <h3>Sigurimi i kamionit tuaj</h3>
+            <div class="desc"> <h3>Sigurimi i Makinave të rënda</h3>
              <p id="text1">Sigurimi i kamionit tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
+                <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>           
              </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="foto/camera.jpg" style="outline: 2px #999595 solid;">
-            <div class="desc"> <h3>Sigurimi i vendit tuaj</h3>
+            <div class="desc"> <h3>Sigurimi i Pronës tuaj</h3>
              <p id="text1">Sigurimi i vendit tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
+                <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>           
              </div>
         </div>
             </td> 
