--- a/faqet-tjera/shpallje.html
+++ b/faqet-tjera/shpallje.html
@@ -25,7 +25,7 @@
 	<div class="wrapper">
 		<div class="banner-text">
 			<h2 >PROSIG</h2>
-			<h4>Kompani e sigurimeve</h4>
+			<h4>Kompania e sigurimeve</h4>
 		</div>
 	</div>
 	
@@ -36,7 +36,7 @@
 		<div class="services-area">
 			<div class="single-services">
 				<div class="icon1"><i class="fa fa-code"></i></div>
-				<h4>Pozita:Jurist</h4>
+				<h4>Jurist</h4>
 				<p style="text-align: left; margin-left: 20px;">Kërkojmë juris të dipolmuar me përvojë pune disa vjeçare.
 					Të interesuarti mund ti dërgojnë CV dhe dokumentet përcjellese në email: hr@kosovaere.com 
 				</p>
@@ -69,25 +69,23 @@
 
 <section class="works">
 	<div class="wrapper">
-		<h2>Our latest works</h2>
+		<h2 style="margin-left: 10px">Njihuni detajisht me shërbimet tona</h2>
 		<div class="works-area">
 			<div class="single-works">
-				<img src="foto1.jpg">
-				<h4>Business</h4>
-				<h6>Business Card Graphics</h6>
-				<p>aLorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
+				<img src="foto_1.jpg" style="height: 230px;">
+				<h4>Sigurimi i biznesit</h4>
+				<p style="font-size: 16px;">Zgjedhni sigurimin që ju nevojitet për biznesin tuaj<br> <a href="../lexo1.html" style="color: #d2514b;text-decoration: none;font-size: 16px;"> <strong>lexo më shumë >></strong></a></p>
 			</div>
 			<div class="single-works">
-				<img src="foto1.jpg">
-				<h4>Business</h4>
-				<h6>Business Card Graphics</h6>
-				<p>aLorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
+				<img src="foto_2.jpg" style="height: 230px;">
+				<h4>Udhëtimi im</h4>
+				<p style="font-size: 16px;">Sigurimi i shendetit ne udhetim<br> <a href="../lexo2.html" style="color: #d2514b;text-decoration: none;font-size: 16px;"> <strong>lexo më shumë >></strong></a></p>
 			</div>
 			<div class="single-works">
-				<img src="foto1.jpg">
-				<h4>Business</h4>
-				<h6>Business Card Graphics</h6>
-				<p>aLorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
+				<img src="foto_3.jpg" style="height: 230px;">
+				<h4>Shëndeti im</h4>
+				<p style="font-size: 16px;">Siguro shëndetin për çdo rast<br> <a href="../lexo3.html" style="color: #d2514b;text-decoration: none;font-size: 16px;"> <strong> lexo më shumë >></strong></a></p>
+				
 			</div>
 		</div>		
 	</div>	
@@ -95,7 +93,7 @@
 
 <section class="quotes">
 	<div class="wrapper">
-		<p>The strongest people are those who show strength in front of us but shows wh win  battles we know nothin about</p>
+		<p style="font-family: italic; font-size: 18px;color: #60005f;">Struktura organizative shpeshherë përkufizohet me komunikimin, autoritetin dhe marrëdhëniet e ndërsjella brenda organizatës. Të gjitha këto cilësi të larta organizative gjenden brenda strukturës tashmë të ndërtuar të Kompanisë së Sigurimeve "PROSIG".</p>
 	</div>	
 </section>
 
@@ -103,33 +101,33 @@
 	<div class="wrapper">
 		<div class="footer-area">
 			<div class="single-footer">
-				<h2>het in touch</h2>
-				<p>aLorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
+				<h2>Contact</h2>
+				<p>Ne gjenedemi ne kete adrese:</p>
 				<address>
-					15,Moonshine Street <br>
-					Light City,New York <br>
+					Prishtine,Kosove <br>
+					Rruga 10000,Prishtine <br>
 					0124 0124 0124 <br>
-					support@thing.com <br>
+					grupi35@live.com <br>
 				</address>
 			</div>
 		    <div class="single-footer">
 					<h2>twitter</h2>
 					<ul>
-						<p>aLorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
-						<p>aLorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
-						<p>aLorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
+						<p>@Kastriot-Demaj</p>
+						<p>@Majlinda-Jaha</p>
+						<p>@Gentian-Veliu</p>
 					</ul>
 		    </div>
 		    <div class="single-footer">
-					<h2>popular posts</h2>
-					<p>aLorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
-					<p>Lorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
-					<p>Lorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
+					<h2>Email-at</h2>
+					<p>kastrioti_d@live.com</p>
+					<p>majlindajaha@hotmail.com</p>
+					<p>gentritveliu@hotmail.com</p>
 	     	</div>
 		    <div class="single-footer">
 					<h2>about us</h2>
-					<p>Lorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioaLorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
-					<p>Lorem demsd  sdkad dsfkdf askdjfasjd aseifjfsd ajsdfkasd nam,sndaisnvanvrioa</p>
+					<p>Kompania e sigurimeve “PROSIG” është trashëgimtare e shtëpise më të vjetër të sigurimve "SIGURIMI" dhe si e tillë është më e madhja, me shtrirje më të gjërë në tërë territorin gjeografik të Kosovës dhe me të drejtën e ushtrimit të veprimtarisë në të gjitha llojet e sigurimeve.</p>
+					
 		    </div>
 			<div class="footer-b">
 				<p class="footer-bottom" >&copy; 2017 Mouri Themes,All Rights reserved</p>	
