--- a/faqet-tjera/shpallje.html
+++ b/faqet-tjera/shpallje.html
@@ -130,7 +130,7 @@
 					
 		    </div>
 			<div class="footer-b">
-				<p class="footer-bottom" >&copy; 2017 Mouri Themes,All Rights reserved</p>	
+				<p class="footer-bottom" >&copy; 2019 PROSIG,All Rights reserved</p>	
 			</div>
 	    </div>
 	</div>
