--- a/kontakti.html
+++ b/kontakti.html
@@ -88,6 +88,7 @@
             </div>
             <div class="divrrjetet">
                 <h2>Animacionet</h2>
+                 <div class="animacioni"></div>
             </div>
         </div>
     </div>
