--- a/kontakti.html
+++ b/kontakti.html
@@ -100,21 +100,21 @@
              <div>
                  <p style="float:left;">
                      <label>Name:</label><br />
-                     <input type="text" name="Name" size="23" color="white"
+                     <input type="text" name="Name" size="23" color="white" placeholder="Jepni Emrin tuaj..."
                             style="background-color: #999999; border-color:grey;border-style:none;"/>
                  </p>
                  <p style="float:right;">
                      <label>Email:</label><br />
-                     <input name="Email" size="29" color=white style="background-color:#999999 ;border-color:grey;border-style:none;"></input>
+                     <input name="Email" size="29" color=white placeholder="Jepni Email-in tuaj..." style="background-color:#999999 ;border-color:grey;border-style:none;"></input>
                  </p>
              </div>
             <p>
                 <label>Message:</label><br />
-                <textarea name="Description" rows="6" cols="52" color="white"
-                          style="background-color: #999999; border-color:grey;border-style:none;"></textarea>
+                <textarea name="Description" rows="6" cols="52" color="white" placeholder="Shkruani nje mesazh..."
+                           style="background-color: #999999; border-color:grey;border-style:none;"></textarea>
             </p>
             <div class="rectangle centered">
-                <input type="submit" value="Dergo"/>
+                <input type="button" class="button" onclick="alert('Kerkesa juaj &euml;sht&euml; kryer me sukses!')" value="Dergo"/>
                 <input type="reset" value="Pastro"/>
             </div>
         </div>
