--- a/kontakti.html
+++ b/kontakti.html
@@ -64,6 +64,7 @@
                            <td><a href="mailto:gentianve@gmail.com"><img src="foto/email_32.png" title="Email"></a></td>
                        </tr>
                    </table>
+             <a href="Game.html" target="_blank" title="Enigma HTML5">Kliko ketu per te luajtur</a>
         </div>
         <div class="right1">
             <div class="divaudio">
