--- a/kontakti.html
+++ b/kontakti.html
@@ -88,8 +88,9 @@
                 </video>
             </div>
             <div class="divrrjetet">
-                <h2>Animacionet</h2>
+               <h4 style="text-align: center;">Animacionet</h4>
                  <div class="animacioni"></div>
+                <img style="height: 300px; width: 500px; margin-top: 220px;" src="foto/car.gif" title="Gif">
             </div>
         </div>
     </div>
