--- a/kontakti.html
+++ b/kontakti.html
@@ -88,7 +88,7 @@
                 </video>
             </div>
             <div class="divrrjetet">
-               <h4 style="text-align: center;">Animacionet</h4>
+               <h5 align="center"><a href="animacionet.html" target="_blank">Kliko ketu per te pare me shume animacione</a></h5>
                  <div class="animacioni"></div>
                 <img style="height: 300px; width: 500px; margin-top: 220px;" src="foto/car.gif" title="Gif">
             </div>
