--- a/rrethnesh1.html
+++ b/rrethnesh1.html
@@ -38,27 +38,27 @@
                 <div class="center1">
                     <br>
                 <h2>MISIONI DHE VIZIONI</h2>
-                <p>Të jemi zgjidhja ideale e ofrimit të sigurimeve duke 
-                    identifikuar në pëpikmëri kërkesat dhe nevojat e klientëve për sigurime. 
+                <p>T&euml; jemi zgjidhja ideale e ofrimit t&euml; sigurimeve duke 
+                    identifikuar n&euml; p&euml;pikm&euml;ri k&euml;rkesat dhe nevojat e klient&euml;ve p&euml;r sigurime. 
                 </p>
                 <img style="margin-left: 150px;" src="foto/misioni-vizioni.jpg" alt="Misioni dhe Vizioni">
-                <p>PROSIG synon të ofrojë produkte dhe shërbime 
-                    të nivelit të lartë me standard ndërkombëtar 
-                    dhe korrekt për kërkesat e të siguruarve, duke
-                    shërbyer si furnizues i produkteve të sigurimeve, dhe 
-                    të shërbejë si mbështetje financiare për të dëmtuarit 
-                    dhe njëkohësisht të jetë një kompani stabile dhe profitabile.</p><br>
+                <p>PROSIG synon t&euml; ofroj&euml; produkte dhe sh&euml;rbime 
+                    t&euml; nivelit t&euml; lart&euml; me standard nd&euml;rkomb&euml;tar 
+                    dhe korrekt p&euml;r k&euml;rkesat e t&euml; siguruarve, duke
+                    sh&euml;rbyer si furnizues i produkteve t&euml; sigurimeve, dhe 
+                    t&euml; sh&euml;rbej&euml; si mb&euml;shtetje financiare p&euml;r t&euml; d&euml;mtuarit 
+                    dhe nj&euml;koh&euml;sisht t&euml; jet&euml; nj&euml; kompani stabile dhe profitabile.</p><br>
                 <p>Planifikohet rritja e aktivitetit me produkte 
-                    ekzistuese ndaj klientëve të rinjë, duke respektuar
-                    vazhdimisht ata dhe duke pasur kujdes në 
-                    rentabilitetin e punës. Në këtë drejtim janë  
-                    të angazhuar ekspertë nga lëmia e sigurimeve 
-                    dhe ajo teknike në mënyrë që shërbimet të jenë
-                    në nivelin më të lartë.</p><br>
-                <p>PROSIG posedon  infrastrukturën moderne të IT-së, që efikasiteti të jetë në nivel të lartë.</p><br>
-                <p>PROSIG ofron produkte të dizajnuara veqanërisht
-                    për nevojat e klientëve, në mënyrë që ata të 
-                    ndiejnë se janë të rëndësishëm dhe të respektueshëm.</p>
+                    ekzistuese ndaj klient&euml;ve t&euml; rinj&euml;, duke respektuar
+                    vazhdimisht ata dhe duke pasur kujdes n&euml; 
+                    rentabilitetin e pun&euml;s. N&euml; k&euml;t&euml; drejtim jan&euml;  
+                    t&euml; angazhuar ekspert&euml; nga l&euml;mia e sigurimeve 
+                    dhe ajo teknike n&euml; m&euml;nyr&euml; q&euml; sh&euml;rbimet t&euml; jen&euml;
+                    n&euml; nivelin m&euml; t&euml; lart&euml;.</p><br>
+                <p>PROSIG posedon  infrastruktur&euml;n moderne t&euml; IT-s&euml;, q&euml; efikasiteti t&euml; jet&euml; n&euml; nivel t&euml; lart&euml;.</p><br>
+                <p>PROSIG ofron produkte t&euml; dizajnuara veqan&euml;risht
+                    p&euml;r nevojat e klient&euml;ve, n&euml; m&euml;nyr&euml; q&euml; ata t&euml; 
+                    ndiejn&euml; se jan&euml; t&euml; r&euml;nd&euml;sish&euml;m dhe t&euml; respektuesh&euml;m.</p>
                 
                 </div></div>
         </div>
