--- a/rrethnesh2.html
+++ b/rrethnesh2.html
@@ -38,22 +38,22 @@
                 <div class="center1">
                     <br>
                 <h2>KUSH JEMI NE</h2>
-                <p>Kompania e sigurimeve “PROSIG” është trashëgimtare
-                    e shtëpise më të vjetër të sigurimve "SIGURIMI" dhe si e 
-                    tillë është më e madhja, me shtrirje më të gjërë në tërë
-                    territorin gjeografik të Kosovës dhe me të drejtën e ushtrimit 
-                    të veprimtarisë në të gjitha llojet e sigurimeve.</p><br>
-                <p>Kompania e Sigurimeve “SIGURIMI”, në tregun e sigurimeve në
-                    Kosovë ka qenë e pranishme që nga viti 2000. Nga ky vit,
-                    në përputhje me ridefinimin e statusit të saj, u themelua
-                    si Bashkësi e sigurimit të Pasurisë dhe Personave me 
-                    emrin “SIGURIMI”. Që nga viti 2001 ka punuar si shoqëri aksionare.</p><br>
-                <p>Në harmoni me bazat e transformimit të pronësisë,
-                    Kuvendi i aksionarëve vendosi ta riorganizojë në 
-                    Kompani të Sigurimeve “PROSIG”, me status të shoqërisë
+                <p>Kompania e sigurimeve “PROSIG” &euml;sht&euml; trash&euml;gimtare
+                    e sht&euml;pise m&euml; t&euml; vjet&euml;r t&euml; sigurimve "SIGURIMI" dhe si e 
+                    till&euml; &euml;sht&euml; m&euml; e madhja, me shtrirje m&euml; t&euml; gj&euml;r&euml; n&euml; t&euml;r&euml;
+                    territorin gjeografik t&euml; Kosov&euml;s dhe me t&euml; drejt&euml;n e ushtrimit 
+                    t&euml; veprimtaris&euml; n&euml; t&euml; gjitha llojet e sigurimeve.</p><br>
+                <p>Kompania e Sigurimeve “SIGURIMI”, n&euml; tregun e sigurimeve n&euml;
+                    Kosov&euml; ka qen&euml; e pranishme q&euml; nga viti 2000. Nga ky vit,
+                    n&euml; p&euml;rputhje me ridefinimin e statusit t&euml; saj, u themelua
+                    si Bashk&euml;si e sigurimit t&euml; Pasuris&euml; dhe Personave me 
+                    emrin “SIGURIMI”. Q&euml; nga viti 2001 ka punuar si shoq&euml;ri aksionare.</p><br>
+                <p>N&euml; harmoni me bazat e transformimit t&euml; pron&euml;sis&euml;,
+                    Kuvendi i aksionar&euml;ve vendosi ta riorganizoj&euml; n&euml; 
+                    Kompani t&euml; Sigurimeve “PROSIG”, me status t&euml; shoq&euml;ris&euml;
                     aksionare, duke miratuar aktet themelore si dhe duke
-                    emëruar Këshillin Drejtues, Këshillin mbikqyrës dhe 
-                    Drejtorin e përgjithshëm të Kompanisë.</p><br>
+                    em&euml;ruar K&euml;shillin Drejtues, K&euml;shillin mbikqyr&euml;s dhe 
+                    Drejtorin e p&euml;rgjithsh&euml;m t&euml; Kompanis&euml;.</p><br>
                 <h4>Kompania PROSIG ofron keto sigurime primare</h4>
                     <ol>
                         <li>Sigurime te makinave</li>
@@ -62,10 +62,10 @@
                         <li>Sigurime te kompanise suaj</li>
                     </ol>
                 <br>
-                <p>“PROSIG” po e vazhdon traditën duke qenë njëra
-                    nga shtëpitë më të respektuara në fushën e sigurimeve 
-                    dhe me imazhin e ruajtur te klientët dhe qytetarët e Kosovës,
-                    si një partner dhe sigurues i denjë.</p>
+                <p>“PROSIG” po e vazhdon tradit&euml;n duke qen&euml; nj&euml;ra
+                    nga sht&euml;pit&euml; m&euml; t&euml; respektuara n&euml; fush&euml;n e sigurimeve 
+                    dhe me imazhin e ruajtur te klient&euml;t dhe qytetar&euml;t e Kosov&euml;s,
+                    si nj&euml; partner dhe sigurues i denj&euml;.</p>
                 
                 </div></div>
         </div>
