--- a/animacionet.html
+++ b/animacionet.html
@@ -2,6 +2,23 @@
 <html>
     <head>
         <title>Disa Animacione</title>
+        <style>
+            .divcss3{
+                column-count: 4;
+                column-gap: 3px;
+                column-rule: 1px red outset;
+                margin: 40px;
+                padding: 15px;
+                border: 3px  #66ffff dashed;
+                outline: 5px black groove;
+                outline-offset: 15px;
+                -webkit-column-count: 4;
+                -webkit-column-gap: 3px;
+                -webkit-column-rule: 1px #001313 outset;
+                -webkit-column-fill: balance;
+                
+            }
+        </style>
     </head>
     <body style="background-color: #e4dcf9">
             <h1 style="text-align: center;">Ketu do te paraqesim disa animacione</h1>
@@ -28,5 +45,77 @@
   Sorry, your browser does not support inline SVG.
 </svg>
          </div>
+            <p style="color:white;background-color: #001313;">Harta e lokacionit</p>
+        
+            <p>Klikoni butonin p&euml;r t&euml; par&euml; koordinatat e lokacionit tuaj.</p>
+
+<button onclick="getLocation()">Butoni</button>
+
+<p id="demo"></p>
+
+<div id="div1" style="width:500px;height:300px;border:2px solid #001313;" ondrop="drop(event)" ondragover="allowDrop(event)">
+  <img src="foto/mapg.png" width="500" height="300" draggable="true" ondragstart="drag(event)" id="drag1"></div><br />
+  <br>
+  
+  <h3 style="text-align:center">Fakte te rendesishme rreth nesh!</h3>
+  <div class="divcss3">
+            Kompania e Sigurimeve "PROSIG" &euml;sht&euml; themeluar n&euml; mars t&euml; vitit 2010.
+            Periudha e dyt&euml; tremujore e vitit 2010 ka qen&euml; periudha fillestare 
+            e investimeve n&euml; k&euml;t&euml; kompani, nd&euml;rsa aktivitetin e vet&euml; Kompania
+            e Sigurimeve "Prosig" e ka filluar nga muaji Qershor me &ccedil;'rast 
+            licencohet p&euml;r shitjen e produkteve t&euml; sigurimit nga Banka
+            Qendrore e Kosov&euml;s (BQK). Themelues i k&euml;saj Kompanie
+            &euml;sht&euml; z.Ramadan Rrahmani i cili ka treguar nj&euml; sukses 
+            t&euml; madh n&euml; fusha t&euml; ndryshme t&euml; afarizmit. P&euml;r z.Rrahmani 
+            inkuadrimi n&euml; industrin&euml; e sigurimeve ishte nj&euml; sfid&euml; e re
+            me barriera t&euml; m&euml;dha, por si rezultat i pun&euml;s s&euml; palodhshme
+            suksesi ishte i pashmangsh&euml;m. P&euml;r realizimin e q&euml;llimit
+            t&euml; tij, z.Rrahmani p&euml;rcaktoi objektiva t&euml; qarta dhe p&euml;r
+            k&euml;t&euml; si objektiv kryesor ai parasheh investimin n&euml; personel. 
+            P&euml;r t&euml; pun&euml;tor&euml;t jan&euml; aset (pasuri) e nd&euml;rmarrjes dhe jo veg&euml;l e saj. 
+            Fal&euml; seriozitetit dhe profesionalizmit n&euml; l&euml;min e sigurimeve q&euml;
+            kishin personeli i zgjedhur i kompanis&euml; t&euml; cil&euml;t p&euml;rpiluan 
+            strategjin&euml; e pun&euml;s, ata arrit&euml;n t&euml; futen n&euml; treg dhe p&euml;r nj&euml;
+            koh&euml; shum&euml; t&euml; shkurt&euml;r kjo kompani u mir&euml;prit nga klient&euml;t 
+            dhe cil&euml;sohej si kompani q&euml; reflekton besueshm&euml;ri, q&euml;ndrueshm&euml;ri dhe 
+            partneritet afatgjat&euml; me klient&euml;t e saj. N&euml; shtator t&euml; vitit 2010 kompania
+            e sigurimeve PROSIG b&euml;het an&euml;tare e kompanis&euml; s&euml; njohur 
+            austriake "GRAWE GROUP - Grazer Wechselseitige Versicherung Aktiengesellchaft", meq&euml;
+            rast u kuror&euml;zua edhe partneriteti n&euml; mes t&euml; dy kompanive.
+            "GRAWE Group" &euml;sht&euml; kompani e cila ka tradit&euml; 180 vje&ccedil;are n&euml; 
+            fush&euml;n e sigurimeve dhe ka nj&euml; shtrirje n&euml; 13 shtete t&euml; Evrop&euml;s
+            Qendrore dhe Lindore. An&euml;tar&euml;simi n&euml; "GRAWE GROUP" dhe bashkimi
+            i kapitalit me k&euml;t&euml; kompani, ishte objektiv tjet&euml;r i realizuar
+            nga Kompania e Sigurimeve "PROSIG", k&euml;shtu q&euml; q&euml; nga shtatori i vitit 2010,
+            PROSIG-u shihet si nj&euml; nd&euml;r konkurent&euml;t m&euml; serioz n&euml; industrin&euml;
+            e sigurimeve n&euml; vendin ton&euml; dhe me konkurrent&euml;t e saj nuk krahasohet
+            vet&euml;m n&euml; sfer&euml;n e &ccedil;mimeve, por prioritare &euml;sht&euml; sh&euml;rbimi cil&euml;sor
+            i klient&euml;ve dhe cil&euml;sia e produkteve t&euml; cilat jan&euml; p&euml;rgatitur me
+            standarde t&euml; larta nd&euml;rkomb&euml;tare. PROSIG-u p&euml;r nj&euml; koh&euml; shum&euml; t&euml;
+            shkurt&euml;r arrin t&euml; shtrihet n&euml; t&euml; gjith&euml; territorin e Kosov&euml;s, meq&euml; rast brenda 
+            periudh&euml;s nj&euml;vje&ccedil;are hyn n&euml; mesin e tre kompanive m&euml; t&euml; fuqishme me 13.02 % t&euml;
+            pjes&euml;marrjes n&euml; treg. Vler&euml;sim ky i b&euml;r&euml; nga Banka Qendrore e Kosov&euml;s.
+            Pas krijimit t&euml; stabilitetit financiar dhe profesional n&euml; vitin 2013 zt.Rrahmani 
+            arrin t&euml; rikthej 100% t&euml; aksioneve t&euml; kompanis&euml; n&euml; pron&euml;sin&euml; e tij.
+            N&euml; fund t&euml; vitit 2010 Kompania e Sigurimeve "PROSIG" arrin t&euml; b&euml;j&euml; edhe 
+            nj&euml; bashk&euml;punim tjet&euml;r me kompanin&euml; e sigurimit "MONDIAL Assistance Group", kompani
+            kjo pjes&euml; e elit&euml;s nd&euml;rkomb&euml;tare e specializuar n&euml; sfer&euml;n e sigurimeve.
+        </div>
     </body>
+    <script>
+var x = document.getElementById("demo");
+
+function getLocation() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+    } else { 
+        x.innerHTML = "Geolocation is not supported by this browser.";
+    }
+}
+
+function showPosition(position) {
+    x.innerHTML = "Latitude: " + position.coords.latitude + 
+    "<br>Longitude: " + position.coords.longitude;
+}
+</script>
 </html>
