--- a/kontakti.html
+++ b/kontakti.html
@@ -95,70 +95,54 @@
         </div>
     </div>
     
-    <div id="wrap">
-        <div class="left">
-        <form method="get" action="http://www.randyconnolly.com/tests/process.php">
-            <h style="border-bottom:1px black solid;"><b>Why not contact me today!</b></h>
-             <div>
-                 <p style="float:left;">
-                     <label>Name:</label><br />
-                     <input type="text" name="Name" size="23" color="white" placeholder="Jepni Emrin tuaj..."
-                            style="background-color: #999999; border-color:grey;border-style:none;"/>
-                 </p>
-                 <p style="float:right;">
-                     <label>Email:</label><br />
-                     <input name="Email" size="29" color=white placeholder="Jepni Email-in tuaj..." style="background-color:#999999 ;border-color:grey;border-style:none;"></input>
-                 </p>
-             </div>
-            <p>
-                <label>Message:</label><br />
-                <textarea name="Description" rows="6" cols="52" color="white" placeholder="Shkruani nje mesazh..."
-                           style="background-color: #999999; border-color:grey;border-style:none;"></textarea>
-            </p>
-            <div class="rectangle centered">
-                <input type="button" class="button" onclick="alert('Kerkesa juaj &euml;sht&euml; kryer me sukses!')" value="Dergo"/>
-                <input type="reset" value="Pastro"/>
-            </div>
-        </div>
-        <div class="right">
-            <div class="fdiv">
+    <div class="fdiv">
  <div class="fdiv1">
-     <h3 align="center" id="dh3">Partneret e Sigurimit</h3>
-     <hr>
-     <h5 align="center"><a href="http://www.mai-cee.com/"> SIA MAI Reinsurance Broker, Latvia</a></h5>
-     <h5 align="center"><a href="http://www.trustre.com/en/home"> Trust Re, Bahrain</a></h5>
-     <h5 align="center"><a href="http://www.vig-re.com/"> VIG Re,Czech Republic</a></h5>
-     <h5 align="center"><a href="https://www.chaucerplc.com/"> Chaucer Syndicate</a></h5>
+     <br>
+     <h3 align="center" id="dh3">VENDET NE KOSOVE</h3>
+     <hr><br>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
  </div>
                
  <div class="fdiv1">
-     <h3 align="center" id="dh3">Shtetet ne Europe</h3>
-     <hr>
-     <h5 align="center">GJERMANI</h5>
-     <h5 align="center">AUSTRI</h5>
-     <h5 align="center">SUEDI</h5>
-     <h5 align="center">HOLAND</h5>
+     <br>
+     <h3 align="center" id="dh3">VENDET NE KOSOVE</h3>
+     <hr><br>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
  </div>
  <div class="fdiv1">
-     <h3 align="center" id="dh3">Qytetet ne Kosove</h3>
-     <hr>
-     <h5 align="center">PRISHTINE</h5>
-     <h5 align="center">MITROVICE</h5>
-     <h5 align="center">SKENDERAJ</h5>
-     <h5 align="center">PODUJEVE</h5>
- </div>
- <div class="fdiv1">
-     <h3 align="center" id="dh3">Kontakti</h3>
-     <hr>
-     <h5 align="center"> Rr. Hasan Prishtina nr 5, Prishtinë, Kosovë</h5>
-     <h5 align="center">office@prosig.com</h5>
-     <h5 align="center">038 111 222</h5>
-     <h5 align="center">http://www.prosig.com</h5>
+     <br>
+     <h3 align="center" id="dh3">VENDET NE KOSOVE</h3>
+     <hr><br>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
  </div>   
-        </div>
-            <br style="clear: left;" />
+ <div class="fdiv1">
+     <br>
+     <h3 align="center" id="dh3">VENDET NE KOSOVE</h3>
+     <hr><br>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+     <h5 align="center">KOSOVE</h5>
+ </div>
+ <br style="clear: left;" />
 </div>
-    </div>
     <a href="kontakti.html" id="back-to-top" style="display: block;">
         <img src="https://www.scor.com/sites/all/themes/custom/customer/images/scroll-scor-VA.png" alt="back-to-top"></a>
     <footer>
