--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div id="wrap1">
         <div class="left1">
         <form method="get" action="http://www.randyconnolly.com/tests/process.php">
-            <h style="border-bottom:1px black solid;"><b>Why not contact me today!</b></h>
+            <h3 style="text-transform: uppercase; font-family: Times;"><b>Pse nuk na kontaktoni!</b></h3><hr>
              <div>
                  <p style="float:left;">
                      <label>Name:</label><br />
@@ -179,14 +179,18 @@
      <h5 align="center">AUSTRI</h5>
      <h5 align="center">SUEDI</h5>
      <h5 align="center">HOLAND</h5>
+     <h5 align="center">FRANCE</h5>
+     <h5 align="center">SLLOVENI</h5>
  </div>
  <div class="fdiv1">
      <h3 align="center" id="dh3">Qytetet ne Kosove</h3>
      <hr>
      <h5 align="center">PRISHTINE</h5>
-     <h5 align="center">MITROVICE</h5>
      <h5 align="center">SKENDERAJ</h5>
      <h5 align="center">PODUJEVE</h5>
+     <h5 align="center">MITROVICE</h5>
+     <h5 align="center">GJILAN</h5>
+     <h5 align="center">PEJE</h5>
  </div>
  <div class="fdiv1">
      <h3 align="center" id="dh3">Kontakti</h3>
@@ -195,6 +199,7 @@
      <h5 align="center">office@prosig.com</h5>
      <h5 align="center">038 111 222</h5>
      <h5 align="center">http://www.prosig.com</h5>
+     <h5 align="center">grupi35@hotmail.com</h5>
  </div>   
         </div>
             <br style="clear: left;" />
