--- a/animacionet.html
+++ b/animacionet.html
@@ -101,6 +101,14 @@
             nj&euml; bashk&euml;punim tjet&euml;r me kompanin&euml; e sigurimit "MONDIAL Assistance Group", kompani
             kjo pjes&euml; e elit&euml;s nd&euml;rkomb&euml;tare e specializuar n&euml; sfer&euml;n e sigurimeve.
         </div>
+   <ul style="font-size: 20px;">
+      <li>Vendi</li>
+      <li>Harta
+          <ul>
+              <li>Vendi i ndodhjes tuaj</li>
+          </ul>
+      </li>
+   </ul>
     </body>
     <script>
 var x = document.getElementById("demo");
