--- a/animacionet.html
+++ b/animacionet.html
@@ -109,6 +109,9 @@
           </ul>
       </li>
    </ul>
+        <p style="width: 300px;"><img src="foto/facebook_32.png" alt="Kjo është logo e facebook-ut" style="float: right;">Këtu klikoni për të hyrë në facebbok</p>
+      <p style="width: 300px;"><img src="foto/twitter_32.png" alt="Kjo është logo e twitter-ut" style="float: left;">Këtu klikoni për të hyrë në twitter</p>
+  
     </body>
     <script>
 var x = document.getElementById("demo");
