--- a/kontakti.html
+++ b/kontakti.html
@@ -48,13 +48,13 @@
 
     E Shtunë: 08 - 12
 
-    E Diel: Mbyllur
+    <mark>E Diel: Mbyllur</mark>
             </pre>
             <h3 style="margin: 21px; font-family: Sans-serif; border-bottom:1px black solid;">Orët e punës në administratë</h3>
             <pre style="font-family: Garamond;">
     E Hënë - E Premte: 08 - 16
 
-    E Shtunë - E Diel: Mbyllur
+    <mark>E Shtunë - E Diel: Mbyllur</mark>
             </pre>
             <table align="right" id="footert">
                        <tr>
