--- a/kontakti.html
+++ b/kontakti.html
@@ -51,11 +51,11 @@
     <mark>E Diel: Mbyllur</mark>
             </pre>
             <h3 style="margin: 21px; font-family: Sans-serif; border-bottom:1px black solid;">Orët e punës në administratë</h3>
-            <pre style="font-family: Garamond;">
+            <address style="font-family: Garamond; padding-left: 20px;">
     E Hënë - E Premte: 08 - 16
-
-    <mark>E Shtunë - E Diel: Mbyllur</mark>
-            </pre>
+    <br>
+   <mark> E Shtunë - E Diel: Mbyllur</mark>
+            </address>
             <table align="right" id="footert">
                        <tr>
                            <td><a href="https://www.facebook.com/"><img src="foto/facebook_32.png" title="Facebook"></a></td>
