--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <div class="container1" align="left">
         <table class="tabela" style="margin-left:-20px;"> 
-            <td>
+            <td style="padding: 1px;">
                 <div class="gallery" style=" width: 400px ; height :500px;">
                    <img src="foto/home.jpg" style="outline: 2px #999595 solid;">
                    <div class="desc"> <h3>Sigurimi i Shtepisë</h3>
