--- a/index.html
+++ b/index.html
@@ -53,14 +53,11 @@
                      <h2>Kompani e Sigurimeve PROSIG</h2>
                      <p class="paragrafi">Sigurim ideal për shëndetin tuaj në rast se 
                          ju keni planifikuar të vizitoni vendet e 
-                         Bashkimit Europian apo cilit do vend tjetër në botë.
+                         Bashkimit Europian apo cilit do vend tjetër në botë.<br><br>
                          Sigurimi i shëndetit në udhëtim do të ju mbulojë 
                          sigurimin e shëndetit gjatë qëndrimit tuaj jashtë 
-                         vendit në rast të ndonjë sëmundje si dhe do të mbulojë 
-                         maksimalisht deri në limitin e sigurimit tuaj PROSIG 
-                         Interalbanian Vienna Insurance Group sh.a – Dega Kosove 
-                         ofron plane sigurimi gjithëpërfshirëse si dhe te personalizuara
-                         per t’ju pershtatur nevojave dhe kerkesave tuaja për sigurimin e shëndetit në Grup.</p>
+                         vendit.<br><br> Në rast të ndonjë sëmundje si dhe do të mbulojë 
+                         maksimalisht deri në limitin e sigurimit tuaj.</p>
                  </div>
              </div>
          </div>
@@ -69,7 +66,7 @@
         </br></br><h class="hnje">  KETU DO TE GJENI ME TE REJAT E KOMPANISE PROSIG.</h>
     </div>
     <div class="container1" align="left">
-        <table class="tabela" style="margin-left:-20px;"> 
+        <table bgcolor: black; class="tabela" style="margin-left:-20px;"> 
             <td style="padding: 1px;">
                 <div class="gallery" style=" width: 400px ; height :500px;">
                    <img src="foto/home.jpg" style="outline: 2px #999595 solid;">
